align secondary footer links to right to fix #116

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -51,7 +51,7 @@
 .secondary-footer__list {
   @include media(lg) {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     height: 100%;
   }
@@ -63,6 +63,7 @@
 
     @include media(lg) {
       margin-bottom: 0;
+      margin-right: 2rem;
     }
   }
 
